@@ -1,3 +1,9 @@
+2004-03-20  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	PR c/12373
+	* c-typeck.c (tagged_types_tu_compatible_p): Don't use
+	DECL_ORIGINAL_TYPE if there isn't one.
+
 2004-03-20  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	PR other/14630
